# Weistern

./: .gitignore  CMakeLists.txt  README.md
lib/: libraylib.so.5.5.0
src/: main.cc
